wording in HelloWorld

--- a/Workload/app/items/HelloWorldItem/HelloWorldItem.scss
+++ b/Workload/app/items/HelloWorldItem/HelloWorldItem.scss
@@ -181,7 +181,7 @@
   height: 1px;
   border: none;
   background: var(--colorNeutralStroke2, #e1e1e1);
-  margin: var(--spacingVerticalL, 16px) 4px; // Top/bottom: 16px, Left/right: 4px
+  margin: var(--spacingVerticalXXL, 32px) 4px; // Top/bottom: 32px (increased spacing), Left/right: 4px
 }
 
 // Hero input container and styling
