--- a/Workload/app/items/HelloWorldItem/HelloWorldItem.scss
+++ b/Workload/app/items/HelloWorldItem/HelloWorldItem.scss
@@ -217,7 +217,7 @@
   border-radius: var(--borderRadiusMedium);
   background: var(--colorNeutralBackground1);
   overflow: hidden;
-  width: 66.66%;
+  max-width: 66.66%;
 }
 
 .hello-world-expand-button {
